web-infras/parser/tests/fixtures/babel/core/uncategorised/470/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,48)
1|function hello() {'use strict'; try { } catch (eval) { } }
 |                                              ^
